--- a/Code/CapStoneProject/CapStoneProject/Base.lproj/Main.storyboard
+++ b/Code/CapStoneProject/CapStoneProject/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JGr-Zn-ttG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="StV-I4-5H8">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -2276,14 +2276,15 @@
                     <navigationItem key="navigationItem" title="融资情况" id="t94-zk-T0A"/>
                     <size key="freeformSize" width="375" height="1200"/>
                     <connections>
-                        <outlet property="chart_lineChart1" destination="aG3-Kg-zMd" id="D6t-Rt-Q3Y"/>
-                        <outlet property="chart_lineChart2" destination="Rqj-Ry-JmT" id="O9K-Ly-41N"/>
+                        <outlet property="chart_priceRate" destination="Rqj-Ry-JmT" id="9hu-GJ-lGH"/>
+                        <outlet property="chart_totalPrice" destination="aG3-Kg-zMd" id="TeH-l4-fML"/>
                         <outlet property="label_bankCreditInfo" destination="aWd-dg-8Nn" id="lqu-vo-lVv"/>
                         <outlet property="label_bondCapitalRaisingInfo" destination="An6-Vl-B9D" id="YxI-6R-vwt"/>
                         <outlet property="label_debtInfo" destination="5UC-YP-deC" id="weg-Zh-bfU"/>
                         <outlet property="label_overview" destination="av2-nj-hqi" id="tYS-G1-RZT"/>
                         <outlet property="stack_bankCreditTable" destination="XgL-ha-bfl" id="f31-hd-Jse"/>
                         <outlet property="stack_bondCapitalRaisingTable" destination="THL-tg-Kez" id="OYc-tT-Po3"/>
+                        <outlet property="stack_cashFlowTable" destination="Czp-cU-lhn" id="Xjq-Ft-ZqX"/>
                         <outlet property="stack_debtTable" destination="IcY-Vb-hHG" id="9PG-y4-p9t"/>
                     </connections>
                 </viewController>
